# stage-2/backend/src/routes/ReplyRouter.ts
@@ -1,0 +1,10 @@
+import { Router } from 'express';
+import { getReplies, createNewReply } from '../controllers/replyController';
+
+const router = Router();
+
+router.get('/:postId/replies', getReplies);
+router.post('/:postId/replies', createNewReply);
+
+
+export default router;
